<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myinventory"
            android:icon="@drawable/slidebarinventory"
            android:title="myinventory" />
        <item
            android:id="@+id/myprofile"
            android:icon="@drawable/slidebarprofile"
            android:title="myprofile" />
        <item
            android:id="@+id/map"
            android:icon="@drawable/slidebarmap"
            android:title="map" />
        <item
            android:id="@+id/companions"
            android:icon="@drawable/slidebarfriend"
            android:title="companions" />
        <item
            android:id="@+id/signout"
            android:icon="@drawable/signout"
            android:title="sign out" />
    </group>

</menu>
